@@ -1,3 +1,12 @@
+2019-03-07  Kazuhiro Ito  <kzhr@d1.dion.ne.jp>
+
+	Fix the case winmail.dat contains text file.
+	mime-edit-insert-file-parameters requires a existing file to
+	decide charset value.  By this fix, caller decides charset.
+
+	* mime-tnef.el (mime-tnef-insert-file-parameters): New function.
+	(mime-tnef-insert-file): Use it.
+
 2018-08-25  Kazuhiro Ito  <kzhr@d1.dion.ne.jp>
 
 	Displaying resized image is supported.  Emacs 24.4 or later with
